--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 p{
   font-family:Source Code Pro;
   font-size:150%;
-  color:white;
+  color:black;
 
 }
 body{
   background-image: url(https://i.pinimg.com/originals/d3/21/2f/d3212fb4322d209eec45d6f6ddadb5ad.jpg);
   background-size: cover;
   background-repeat: repeat-x;
-  margin-left: 30%;
+  margin-left: 40%;
 }
 button{
   font-family: Source Code Pro;
