Changed font family

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ result{
   margin-left: 20%;
 }
 h1{
-  font-family:Orbitron;
+  font-family:fantasy;
   color:white;
   text-shadow: 2px 2px #2874A6;
   font-size:200%;
