--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ result{
 }
 h1{
   font-family:fantasy;
-  color:grey;
-  text-shadow: 2px 2px #2874A6;
+  color:white;
+  text-shadow: 1px 2px #2874A6;
   font-size:200%;
 }
